Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -63,8 +63,9 @@ CALL METHOD go_alv->refresh_table_display
 - ALV Grid의 화면 모양(제목, 줄무늬, 컬럼 폭 등)을 설정
 - 데이터 내용은 안 바뀌고 표시 방식만 제어
 - `SET_TABLE_FOR_FIRST_DISPLAY` 에서 최초 출력 시만 적용
+</br>
 
-**LVC_S_LAYO (ALV Layout Structure 주요 필드 정리)**
+**< LVC_S_LAYO (ALV Layout Structure 주요 필드 정리) >**
 
 | Field Name     | Description |
 |---------------|-------------|
