Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -79,6 +79,18 @@ CALL METHOD go_alv->refresh_table_display
 | `info_fname`  | **행(Row) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 | `ctab_fname`  | **셀(Cell) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 
+**< ALV Selection Mode (lvc_s_layo-sel_mode) >**
+
+| 값(Value) | 선택 가능 범위 (Possible Selections) | 선택 컬럼 표시 (Selection Column) |
+|-----------|--------------------------------------|-----------------------------------|
+| space     | B와 동일                              | No                                |
+| A         | 다중 행 선택<br>다중 컬럼 선택        | Yes                               |
+| B         | 단일 행 선택<br>다중 컬럼 선택        | No                                |
+| C         | 다중 행 선택<br>다중 컬럼 선택        | No                                |
+| D         | 다중 행 선택<br>다중 컬럼 선택<br>셀 단위 선택 가능 | Yes |
+
+
+
 - `lvc_s_layo` : ALV 화면의 모양(레이아웃) 을 제어하는 구조체
 ```abap
 DATA <ls_layout> TYPE lvc_s_layo.
