Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -63,6 +63,7 @@ CALL METHOD go_alv->refresh_table_display
 - ALV Grid의 화면 모양(제목, 줄무늬, 컬럼 폭 등)을 설정
 - 데이터 내용은 안 바뀌고 표시 방식만 제어
 - `SET_TABLE_FOR_FIRST_DISPLAY` 에서 최초 출력 시만 적용
+- **`Ctrl + Space`** - `gs_layout-` 뒤에서 누르면 구조체 필드 목록 자동 표시
 </br>
 
 **< LVC_S_LAYO (ALV Layout Structure 주요 필드 정리) >**
@@ -91,7 +92,7 @@ CALL METHOD go_alv->refresh_table_display
 | C         | 다중 행 선택<br>다중 컬럼 선택        | No                                |
 | D         | 다중 행 선택<br>다중 컬럼 선택<br>셀 단위 선택 가능 | Yes |
 
-
+</br>
 
 - `lvc_s_layo` : ALV 화면의 모양(레이아웃) 을 제어하는 구조체
 ```abap
