Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -95,7 +95,8 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 **< LVC_S_LAYO (ALV Layout Structure 주요 필드 정리) >**
-
+- `LVC_S_LAYO` : ALV Grid 화면의 모양(제목, 줄무늬, 선택방식, 컬럼폭 등)을 제어하는 레이아웃 설정 구조체
+  
 | Field Name     | Description |
 |---------------|-------------|
 | `grid_title`  | ALV 상단에 표시되는 제목 텍스트 (최대 70자) |
