Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -130,3 +130,132 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 ## < ABAP 객체 생성 기본 문법 >
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: gt_data TYPE TABLE OF sbook,
+      gs_data LIKE LINE OF gt_data.
+
+DATA: ok_code TYPE sy-ucomm,
+      go_cont TYPE REF TO cl_gui_custom_container,
+      go_alv  TYPE REF TO cl_gui_alv_grid.
+DATA: gs_variant TYPE disvariant,
+      gs_stable TYPE LVC_S_STBL,
+      gs_layout TYPE LVC_S_LAYO.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECT-OPTIONS: so_car FOR gs_data-carrid,
+                  so_con FOR gs_data-connid,
+                  so_fdt FOR gs_data-fldate.
+SELECTION-SCREEN END OF BLOCK blk1.
+
+INITIALIZATION.
+  PERFORM set_options.
+  gs_variant-report = sy-cprog.
+  gs_variant-username = sy-uname.
+  gs_variant-handle = 'MAIN'.
+  " handle : 하나의 화면에 여러개의 ALV가 있는 경우
+  "          각 ALV마다 구분자가 필요하므로 구분자 지정해줌
+
+START-OF-SELECTION.
+  PERFORM GET_DATA.
+  CALL SCREEN 100.
+```
+</br>
+</br>
+
+**2) `PBO` 모듈 수정**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-uname sy-datum sy-uzeit.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  " 1. 100번 스크린 Layout에 Area 추가
+  " 2. 만약 Container 가 만들어지기 전이라면, 객체 생성함
+  "    Custom Container 생성
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    " 3. ALV Grid 객체 생성해서 Container와 연결
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+*     MESSAGE ID SY-MSGID TYPE SY-MSGTY NUMBER SY-MSGNO
+*                WITH SY-MSGV1 SY-MSGV2 SY-MSGV3 SY-MSGV4.
+    ENDIF.
+
+    PERFORM set_layout.
+    " 4. ALV Grid 안에 Data display
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+*        i_buffer_active               =
+*        i_bypassing_buffer            =
+*        i_consistency_check           =
+        i_structure_name              = 'SBOOK'
+        is_variant                    = gs_variant
+        i_save                        = 'A' "A, X, U, ''
+        i_default                     = 'X'
+        is_layout                     = gs_layout
+*        is_print                      =
+*        it_special_groups             =
+*        it_toolbar_excluding          =
+*        it_hyperlink                  =
+*        it_alv_graphics               =
+*        it_except_qinfo               =
+*        ir_salv_adapter               =
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4
+            .
+    IF sy-subrc <> 0.
+*     Implement suitable error handling here
+    ENDIF.
+  ELSE.
+    gs_stable-row = 'X'.
+    gs_stable-col = 'X'.
+
+    CALL METHOD go_alv->refresh_table_display
+      EXPORTING
+        is_stable      = gs_stable
+        i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
+                             " _ : 전체 리프레쉬 (기본)
+      EXCEPTIONS
+        finished       = 1
+        others         = 2.
+
+    IF sy-subrc <> 0.
+      MESSAGE 'Data refresh 중 Error 발생' TYPE 'E'.
+    ENDIF.
+
+  ENDIF.
+ENDMODULE.
+```
