Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -129,7 +129,7 @@ CALL METHOD go_alv->set_table_for_first_display
 
 </br>
 
-## < ABAP 객체 생성 기본 문법 >
+## < ABAP 객체 생성 기본 문법 예제 >
 </br>
 
 **1) `TOP` 모듈 수정**
