Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -166,6 +166,12 @@ START-OF-SELECTION.
 </br>
 
 **2) `PBO` 모듈 수정**
+- ALV 화면을 새로 고침하는 메서드 호출
+  
+<img width="289" height="278" alt="image" src="https://github.com/user-attachments/assets/897d99d2-81ef-4170-8df4-279379ebac4a" />
+</br>
+</br>
+
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
