Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -121,6 +121,11 @@ CALL METHOD go_alv->set_table_for_first_display
 | D         | 다중 행 선택<br>다중 컬럼 선택<br>셀 단위 선택 가능 | Yes |
 
 </br>
+</br>
+</br>
+
+### 2) ALV 레이아웃 설정 (IS_LAYOUT)
+
 
 </br>
 </br>
