Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -124,9 +124,64 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 </br>
 
-### 2) ALV 레이아웃 설정 (IS_LAYOUT)
+### 3) ALV 임계값(Threshold) 아이콘 표시 – Exception Display
+- 특정 조건에 따라 빨강/노랑/초록 아이콘 자동 표시
+- `excp_fname` : 예외(아이콘) 값을 담고 있는 컬럼 이름을 ALV에 알려줌
+- `excp_led` : 해당 컬럼 값을 신호등(LED) 아이콘으로 표시하도록 설정
+- ALV Exception 컬럼은 `1 = 빨강` , `2 = 노랑` , `3 = 초록`
+```abap
+gs_layout-excp_fname = '<예외컬럼명>'.
+gs_layout-excp_led   = 'X'.
 
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = <itab>.
 
+*&---------------------------------------------------------------------*
+
+LOOP AT <itab> INTO <wa>.
+  IF <조건1>.
+    <wa>-<excp_field> = '1'.
+  ELSEIF <조건2>.
+    <wa>-<excp_field> = '2'.
+  ELSE.
+    <wa>-<excp_field> = '3'.
+  ENDIF.
+
+  MODIFY <itab> FROM <wa> TRANSPORTING <excp_field>.
+ENDLOOP.
+```
+```abap
+" 예외 표시용 컬럼명 지정
+gs_layout-excp_fname = 'EXCP_FLD'.  " 아이콘 값이 들어있는 필드
+gs_layout-excp_led   = 'X'.         " LED(신호등) 아이콘 사용
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name = 'SFLIGHT'
+    is_layout        = gs_layout
+  CHANGING
+    it_outtab        = gt_flights.
+
+*&---------------------------------------------------------------------*
+
+LOOP AT gt_flights INTO gs_flight.
+
+  IF gs_flight-seatsocc < 50.
+    gs_flight-excp = '1'.   " 🔴 빨강
+  ELSEIF gs_flight-seatsocc <= 200.
+    gs_flight-excp = '2'.   " 🟡 노랑
+  ELSE.
+    gs_flight-excp = '3'.   " 🟢 초록
+  ENDIF.
+
+  MODIFY gt_flights FROM gs_flight TRANSPORTING excp.
+  CLEAR gs_flight.
+
+ENDLOOP.
+```
 </br>
 </br>
 
