Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -194,8 +194,11 @@ ENDLOOP.
 
 **1) `TOP` 모듈 수정**
 ```abap
-DATA: gt_data TYPE TABLE OF sbook,
-      gs_data LIKE LINE OF gt_data.
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: excp_fld TYPE CHAR1,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data.
 
 DATA: ok_code TYPE sy-ucomm,
       go_cont TYPE REF TO cl_gui_custom_container,
@@ -225,7 +228,70 @@ START-OF-SELECTION.
 </br>
 </br>
 
-**2) `PBO` 모듈 수정**
+**2) `F01` 모듈 수정**
+```abap
+FORM set_options.
+  so_fdt-sign = 'I'.
+  so_fdt-option = 'BT'.
+  so_fdt-low = sy-datum(4) && '0101'. " 매년 첫째날
+  so_fdt-high = sy-datum(4) && '1231'. " 매년 마지막날
+  APPEND so_fdt.
+
+  so_car-sign = 'I'.
+  so_car-option = 'GT'.
+  so_car-low = 'AZ'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'LH'.
+  APPEND so_car.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM get_data.
+  SELECT * FROM SBOOK
+    INTO CORRESPONDING FIELDS OF TABLE gt_data
+    WHERE carrid IN so_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+  IF sy-subrc <> 0.
+    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
+  ELSE.
+    LOOP AT gt_data INTO gs_data.
+      IF gs_data-loccuram < 500.
+        gs_data-EXCP_FLD = '1'. " 빨강
+      ELSEIF gs_data-loccuram >= 500 AND gs_data-loccuram <= 800.
+        gs_data-EXCP_FLD = '2'. " 노랑
+      ELSE.
+        gs_data-EXCP_FLD = '3'. " 초록
+      ENDIF.
+
+      MODIFY gt_data FROM gs_data TRANSPORTING EXCP_FLD.
+      CLEAR gs_data.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_layout.
+  gs_layout-grid_title = 'Booking List'. " Title 적용
+  gs_layout-zebra = 'X'.  " Row 구분색 적용
+  gs_layout-cwidth_opt = 'X'. " 컬럼너비 최적화
+  gs_layout-totals_bef = 'X'. " 합계 맨 위로
+  gs_layout-sel_mode = 'A'. " _,A,B,C,D 선택모드
+
+  gs_layout-excp_fname = 'EXCP_FLD'. " 변수명 알려줌
+  gs_layout-excp_led = 'X'.
+ENDFORM.
+```
+</br>
+</br>
+
+**3) `PBO` 모듈 수정**
 - ALV 화면을 새로 고침하는 메서드 호출
   
 <img width="289" height="278" alt="image" src="https://github.com/user-attachments/assets/897d99d2-81ef-4170-8df4-279379ebac4a" />
