Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -184,6 +184,56 @@ ENDLOOP.
 ```
 </br>
 </br>
+</br>
+
+### 4) ALV 초기 정렬 기준 설정 (lvc_s_sort)
+- ALV 최초 출력 시 정렬 기준을 지정
+- `lvc_s_sort` : 정렬 기준 1개, `lvc_t_sort` : 정렬 기준 여러 개를 담는 테이블
+- `spos` : 정렬 우선순위 (1, 2, 3 …)
+- `up = 'X'` : 오름차순, `down` = 'X' : 내림차순
+```abap
+DATA: gt_sort TYPE lvc_t_sort,
+      gs_sort TYPE lvc_s_sort.
+
+gs_sort-fieldname = '<FIELD_NAME>'.
+gs_sort-spos      = <순번>.
+gs_sort-up        = 'X'.   " 또는 gs_sort-down = 'X'
+APPEND gs_sort TO gt_sort.
+CLEAR gs_sort.
+
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC>'
+  CHANGING
+    it_outtab = <itab>
+    it_sort   = gt_sort.
+```
+```abap
+DATA: gt_sort TYPE lvc_t_sort,
+      gs_sort TYPE lvc_s_sort.
+
+" 1순위: ORDER_DATE 오름차순
+gs_sort-fieldname = 'ORDER_DATE'.
+gs_sort-spos      = 1.
+gs_sort-up        = 'X'.
+APPEND gs_sort TO gt_sort.
+CLEAR gs_sort.
+
+" 2순위: CUSTOMID 오름차순
+gs_sort-fieldname = 'CUSTOMID'.
+gs_sort-spos      = 2.
+gs_sort-up        = 'X'.
+APPEND gs_sort TO gt_sort.
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    i_structure_name = 'SBOOK'
+  CHANGING
+    it_outtab = gt_bookings
+    it_sort   = gt_sort.
+```
+</br>
+</br>
 
 ---
 
