Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -234,6 +234,63 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 ```
 </br>
 </br>
+</br>
+
+### 5) ALV 초기 필터 조건 설정 (LVC_S_FILT)
+- ALV 최초 출력 시 특정 조건으로 데이터 필터링
+- `lvc_s_filt` : 필터 조건 1개
+- `lvc_t_filt` : 필터 조건 여러 개를 담는 테이블
+- `fieldname` 는 ALV에서 필터를 적용할 컬럼명을 의미
+- `sign` 은 조건을 포함(I)할지 제외(E)할지를 결정
+- `option` 은 비교 방식으로 EQ(같음), BT(범위), GE/LE(이상·이하) 등을 지정
+- `low` 는 비교에 사용되는 기준 값이며, BT 사용 시 시작값. `high` 는 BT 옵션 사용 시 범위의 종료값.
+```abap
+DATA: gt_filter TYPE lvc_t_filt,
+      gs_filter TYPE lvc_s_filt.
+
+gs_filter-fieldname = '<FIELD_NAME>'.
+gs_filter-sign      = 'I'.
+gs_filter-option    = 'EQ'.
+gs_filter-low       = <VALUE>.
+APPEND gs_filter TO gt_filter.
+CLEAR gs_filter.
+
+CALL METHOD <alv_ref>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC>'
+  CHANGING
+    it_outtab = <itab>
+    it_filter = gt_filter.
+```
+```abap
+DATA: gt_filter TYPE lvc_t_filt,
+      gs_filter TYPE lvc_s_filt.
+
+" 항공사 필터
+gs_filter-fieldname = 'CARRID'.
+gs_filter-sign      = 'I'.
+gs_filter-option    = 'EQ'.
+gs_filter-low       = 'DL'.
+APPEND gs_filter TO gt_filter.
+CLEAR gs_filter.
+
+" 노선 필터
+gs_filter-fieldname = 'CONNID'.
+gs_filter-sign      = 'I'.
+gs_filter-option    = 'EQ'.
+gs_filter-low       = '1699'.
+APPEND gs_filter TO gt_filter.
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    i_structure_name = 'SFLIGHT'
+  CHANGING
+    it_outtab = gt_flight
+    it_filter = gt_filter.
+```
+
+</br>
+</br>
 
 ---
 
