Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -188,6 +188,9 @@ ENDLOOP.
 
 ### 4) ALV 초기 정렬 기준 설정 (lvc_s_sort)
 - ALV 최초 출력 시 정렬 기준을 지정
+- **`set_sorter_criteria` 는 이미 생성된 ALV Grid에 정렬 기준만 새로 적용하는 메서드**
+</br>
+
 - `lvc_s_sort` : 정렬 기준 1개, `lvc_t_sort` : 정렬 기준 여러 개를 담는 테이블
 - `spos` : 정렬 우선순위 (1, 2, 3 …)
 - `up = 'X'` : 오름차순, `down` = 'X' : 내림차순
@@ -238,6 +241,9 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 
 ### 5) ALV 초기 필터 조건 설정 (LVC_S_FILT)
 - ALV 최초 출력 시 특정 조건으로 데이터 필터링
+- **`set_filter_criteria` 는 이미 생성된 ALV Grid에 필터 조건만 새로 적용하는 메서드**
+</br>
+
 - `lvc_s_filt` : 필터 조건 1개
 - `lvc_t_filt` : 필터 조건 여러 개를 담는 테이블
 - `fieldname` 는 ALV에서 필터를 적용할 컬럼명을 의미
