Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -504,3 +504,13 @@ MODULE init_alv OUTPUT.
   ENDIF.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**4) 결과 확인**
+
+<img width="536" height="370" alt="image" src="https://github.com/user-attachments/assets/e036f5f4-8676-4972-9727-f6f3954d72af" />
+</br>
+</br>
+</br>
+</br>
