Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -523,3 +523,9 @@ ENDMODULE.
 </br>
 
 ### 실습 1
+- 문제
+
+<img width="497" height="276" alt="image" src="https://github.com/user-attachments/assets/3d4d776c-d9ab-4b3a-ae11-d5e9062edb65" />
+</br>
+</br>
+
