--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -531,3 +531,203 @@ ENDMODULE.
 </br>
 </br>
 
+**1) `TOP` 모듈 수정**
+```abap
+DATA: OK_CODE TYPE sy-ucomm,
+      go_container TYPE REF TO cl_gui_custom_container,
+      go_alv_grid TYPE REF TO cl_gui_alv_grid.
+DATA: gs_variant TYPE disvariant,
+      gs_stable TYPE LVC_S_STBL,
+      gs_layout TYPE LVC_S_LAYO.
+
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE sflight.
+DATA: excp TYPE CHAR1,
+      END OF gs_flight.
+DATA: gt_flight LIKE TABLE OF gs_flight.
+
+*DATA: gs_flight2 TYPE BC400_S_FLIGHT,
+*      gt_flight2 TYPE TABLE OF BC400_S_FLIGHT.
+
+PARAMETERS: pa_va TYPE disvariant-variant.
+
+SELECT-OPTIONS: so_car FOR gs_flight-carrid,
+                so_con FOR gs_flight-connid.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+*  PERFORM get_data2.
+  CALL SCREEN 100.
+```
+</br>
+</br>
+
+**2) `F01` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_F01
+*&---------------------------------------------------------------------*
+
+FORM get_data.
+  SELECT * FROM sflight
+    INTO TABLE gt_flight
+    WHERE carrid IN so_car
+      AND connid IN so_con.
+  IF sy-subrc <> 0.
+    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
+  ELSE.
+    LOOP AT gt_flight INTO gs_flight.
+      IF gs_flight-seatsocc < 50.
+        gs_flight-excp = '1'.
+      ELSEIF gs_flight-seatsocc >= 50 AND gs_flight-seatsocc <= 200.
+        gs_flight-excp = '2'.
+      ELSE.
+        gs_flight-excp = '3'.
+      ENDIF.
+
+      MODIFY gt_flight FROM gs_flight TRANSPORTING excp.
+      CLEAR gs_flight.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
+*&---------------------------------------------------------------------*
+*& Form get_data2
+*&---------------------------------------------------------------------*
+*& text
+*&---------------------------------------------------------------------*
+*& -->  p1        text
+*& <--  p2        text
+*&---------------------------------------------------------------------*
+*FORM get_data2.
+*  SELECT carrid connid fldate seatsmax seatsocc FROM sflight
+*    INTO CORRESPONDING FIELDS OF TABLE gt_flight2
+*    WHERE carrid IN so_car
+*      AND connid IN so_con.
+*
+*  LOOP AT gt_flight2 INTO gs_flight2.
+*    gs_flight2-PERCENTAGE = ( gs_flight2-seatsocc / gs_flight2-seatsmax ) * 100.
+*    MODIFY gt_flight2 FROM gs_flight2.
+*  ENDLOOP.
+*ENDFORM.
+*&---------------------------------------------------------------------*
+*& Form free_alv
+*&---------------------------------------------------------------------*
+*& text
+*&---------------------------------------------------------------------*
+*& -->  p1        text
+*& <--  p2        text
+*&---------------------------------------------------------------------*
+FORM free_alv .
+  IF go_container IS INITIAL.
+    go_container->free( ).
+  ENDIF.
+  IF go_alv_grid IS INITIAL.
+    go_alv_grid->free( ).
+  ENDIF.
+  FREE: go_container, go_alv_grid.
+ENDFORM.
+*&---------------------------------------------------------------------*
+*& Form set_layout
+*&---------------------------------------------------------------------*
+*& text
+*&---------------------------------------------------------------------*
+*& -->  p1        text
+*& <--  p2        text
+*&---------------------------------------------------------------------*
+FORM set_layout .
+  gs_layout-grid_title = 'Flight List'.
+  gs_layout-zebra = 'X'.
+  gs_layout-sel_mode = 'C'.
+  gs_layout-excp_fname = 'EXCP'.
+ENDFORM.
+```
+</br>
+</br>
+
+**3) `PBO` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CREATE_AND_TRANSFER OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE create_and_transfer OUTPUT.
+  IF go_container IS INITIAL.
+    CREATE OBJECT go_container
+      EXPORTING
+        container_name              = 'MY_CONTROL_AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+      MESSAGE A010(BC405_408).
+    ENDIF.
+
+    CREATE OBJECT go_alv_grid
+      EXPORTING
+        i_parent          = go_container
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+      MESSAGE A010(BC405_408).
+    ENDIF.
+
+    gs_variant-report = sy-cprog.
+    gs_variant-variant = pa_va.
+
+    PERFORM set_layout.
+    CALL METHOD go_alv_grid->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'sflight'
+        is_variant                    = gs_variant
+        i_save                        = 'A'
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_flight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE A012(BC405_408).
+    ENDIF.
+
+
+  ENDIF.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**4) 결과 확인**
+
+<img width="499" height="384" alt="image" src="https://github.com/user-attachments/assets/ac3e549d-a76c-48cd-b8b3-da963ca38b9a" />
