Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -700,7 +700,22 @@ ENDMODULE.
 </br>
 </br>
 
-**1) `TOP` 모듈 수정**
+**1) `Screen 100` 수정**
+```abap
+PROCESS BEFORE OUTPUT.
+  MODULE status_0100.
+  CALL SUBSCREEN SUB01 INCLUDING sy-cprog '1100'.
+  MODULE init_alv.
+*
+PROCESS AFTER INPUT.
+  MODULE exit AT EXIT-COMMAND.
+  CALL SUBSCREEN SUB01.
+  MODULE user_command_0100.
+```
+</br>
+</br>
+
+**2) `TOP` 모듈 수정**
 ```abap
 TABLES: SDYN_CONN.
 
@@ -749,7 +764,7 @@ START-OF-SELECTION.
 </br>
 </br>
 
-**2) `F01` 모듈 수정**
+**3) `F01` 모듈 수정**
 ```abap
 FORM set_options.
   so_fdt-sign = 'I'.
@@ -870,7 +885,7 @@ ENDFORM.
 </br>
 </br>
 
-**3) `PBO` 모듈 수정**
+**4) `PBO` 모듈 수정**
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
@@ -970,7 +985,7 @@ ENDMODULE.
 </br>
 </br>
 
-**4) `PAI` 모듈 수정**
+**5) `PAI` 모듈 수정**
 ```abap
 MODULE exit INPUT.
   CASE OK_CODE.
@@ -997,7 +1012,7 @@ ENDMODULE.
 </br>
 </br>
 
-**5) 결과 확인**
+**6) 결과 확인**
 
 <img width="505" height="273" alt="image" src="https://github.com/user-attachments/assets/d069801f-404f-44e3-b297-150e8e0de9af" />
 
