--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -1,8 +1,11 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ABAP 객체 생성 기본 문법**
-- **2) ALV 레이아웃 Variant 저장 옵션**
+- **1) ALV 데이터 갱신 (refresh_table_display, stable)**
+- **2) ALV 레이아웃 설정 (IS_LAYOUT)**
+- **3) ALV 임계값(Threshold) 아이콘 표시 – Exception Display (특정 조건에 따라 빨강/노랑/초록 아이콘 자동 표시)**
+- **4) ALV 초기 정렬 기준 설정 (lvc_s_sort)**
+- **5) ALV 초기 필터 조건 설정 (LVC_S_FILT)**
 
 </br>
 </br>
