Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -297,7 +297,125 @@ CALL METHOD go_alv_grid->set_table_for_first_display
     it_outtab = gt_flight
     it_filter = gt_filter.
 ```
+</br>
+</br>
+</br>
 
+### 6) ALV Line Color (행 색상 제어)
+- ALV 행(Line)에 색상을 적용하는 기능
+```abap
+'C' && <color_constant> && <intensified> && <inverse>
+```
+- `C` : 색상 사용 표시
+- `<color_constant>` : 색상 번호 (0~7)
+- `<intensified>` : 진하게 표시 (1) / 기본 (0)
+- `<inverse>` : 글자색 ↔ 배경색 반전 (1) / 기본 (0)
+```abap
+TYPE-POOLS col.
+
+TYPES: BEGIN OF gty_booking,
+         INCLUDE TYPE sbook,
+         color TYPE c LENGTH 4,
+       END OF gty_booking.
+
+gs_booking-color = 'C' && col_negative && '10'.
+
+gs_layout-info_fname = 'COLOR'.
+```
+</br>
+</br>
+</br>
+
+### 7) ALV Cell Color (셀 단위 색상 제어)
+- ALV에서 특정 셀만 색상 변경하는 기능
+- 행 색상과 달리 셀 색상용 내부테이블 사용
+- 각 행마다 `lvc_t_scol` 타입 내부테이블을 가짐
+- 색상 적용 후 `CTAB_FNAME` 으로 ALV에 전달해야 표시됨
+</br>
+
+- 데이터 선언 형식
+```abap
+TYPE-POOLS col.
+
+DATA gs_layout TYPE lvc_s_layo.
+
+TYPES: BEGIN OF <row_type>,
+         INCLUDE TYPE <structure>,
+         it_colfields TYPE lvc_t_scol,
+       END OF <row_type>.
+
+DATA: <gt_table> TYPE TABLE OF <row_type>,
+      <gs_row>   TYPE <row_type>.
+
+DATA <gs_colfield> LIKE LINE OF <gs_row>-it_colfields.
+```
+```abap
+TYPE-POOLS col.
+
+DATA gs_layout TYPE lvc_s_layo.
+
+TYPES: BEGIN OF gty_booking,
+         INCLUDE TYPE sbook,
+         it_colfields TYPE lvc_t_scol,
+       END OF gty_booking.
+
+DATA: gt_bookings TYPE TABLE OF gty_booking,
+      gs_booking  TYPE gty_booking.
+
+DATA gs_colfield LIKE LINE OF gs_booking-it_colfields.
+```
+- 셀 색상 처리 형식
+```abap
+LOOP AT <gt_table> INTO <gs_row>
+     WHERE <condition>.
+
+  <gs_colfield>-fname      = '<FIELDNAME>'.
+  <gs_colfield>-color-col  = <COLOR>.
+  <gs_colfield>-color-int  = '1'.
+  <gs_colfield>-color-inv  = '0'.
+
+  APPEND <gs_colfield> TO <gs_row>-it_colfields.
+
+  MODIFY <gt_table> FROM <gs_row>
+    TRANSPORTING it_colfields.
+ENDLOOP.
+```
+```abap
+LOOP AT gt_bookings INTO gs_booking
+     WHERE smoker = 'X'.
+
+  gs_colfield-fname      = 'SMOKER'.
+  gs_colfield-color-col  = col_negative.
+  gs_colfield-color-int  = '1'.
+  gs_colfield-color-inv  = '0'.
+
+  APPEND gs_colfield TO gs_booking-it_colfields.
+
+  MODIFY gt_bookings FROM gs_booking
+    TRANSPORTING it_colfields.
+ENDLOOP.
+```
+- Layout + ALV 연결 형식
+```abap
+gs_layout-ctab_fname = '<IT_COLFIELDS>'.
+
+go_alv_grid->set_table_for_first_display(
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = <gt_table>
+).
+```
+```abap
+gs_layout-ctab_fname = 'IT_COLFIELDS'.
+
+go_alv_grid->set_table_for_first_display(
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = gt_bookings
+).
+```
 </br>
 </br>
 
