--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -303,6 +303,7 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 
 ### 6) ALV Line Color (행 색상 제어)
 - ALV 행(Line)에 색상을 적용하는 기능
+- `INFO_FNAME` : ALV에게 “행 색상(Line Color) 정보가 들어있는 필드명”을 알려주는 설정
 ```abap
 'C' && <color_constant> && <intensified> && <inverse>
 ```
@@ -331,90 +332,90 @@ gs_layout-info_fname = 'COLOR'.
 - 행 색상과 달리 셀 색상용 내부테이블 사용
 - 각 행마다 `lvc_t_scol` 타입 내부테이블을 가짐
 - 색상 적용 후 `CTAB_FNAME` 으로 ALV에 전달해야 표시됨
+- `CTAB_FNAME` : ALV에게 “셀 색상(Cell Color) 정보가 들어있는 필드명”을 알려주는 설정
 </br>
 
-- 데이터 선언 형식
+- `lt_scol` : 이 행에서 색칠할 셀 목록
+- `ls_scol` : 셀 하나 색상 정보
 ```abap
-TYPE-POOLS col.
+" 1. 출력 구조
+DATA: BEGIN OF <gs_data>.
+        INCLUDE TYPE <structure>.
+DATA: <excp_fld> TYPE char1,
+      <col_fld>  TYPE char4,        " Line Color
+      <lt_scol>  TYPE lvc_t_scol,   " Cell Color
+     END OF <gs_data>.
 
-DATA gs_layout TYPE lvc_s_layo.
+DATA <gt_data> LIKE TABLE OF <gs_data>.
+DATA <ls_scol> TYPE lvc_s_scol.
 
-TYPES: BEGIN OF <row_type>,
-         INCLUDE TYPE <structure>,
-         it_colfields TYPE lvc_t_scol,
-       END OF <row_type>.
 
-DATA: <gt_table> TYPE TABLE OF <row_type>,
-      <gs_row>   TYPE <row_type>.
+" 2. 셀 색상 처리
+LOOP AT <gt_data> INTO <gs_data>.
+  IF <조건>.
+    <ls_scol>-fname      = '<FIELDNAME>'.
+    <ls_scol>-color-col  = <COLOR>.
+    <ls_scol>-color-int  = '1'.
+    <ls_scol>-color-inv  = '0'.
 
-DATA <gs_colfield> LIKE LINE OF <gs_row>-it_colfields.
-```
-```abap
-TYPE-POOLS col.
+    APPEND <ls_scol> TO <gs_data>-<lt_scol>.
+  ENDIF.
 
-DATA gs_layout TYPE lvc_s_layo.
-
-TYPES: BEGIN OF gty_booking,
-         INCLUDE TYPE sbook,
-         it_colfields TYPE lvc_t_scol,
-       END OF gty_booking.
-
-DATA: gt_bookings TYPE TABLE OF gty_booking,
-      gs_booking  TYPE gty_booking.
-
-DATA gs_colfield LIKE LINE OF gs_booking-it_colfields.
-```
-- 셀 색상 처리 형식
-```abap
-LOOP AT <gt_table> INTO <gs_row>
-     WHERE <condition>.
-
-  <gs_colfield>-fname      = '<FIELDNAME>'.
-  <gs_colfield>-color-col  = <COLOR>.
-  <gs_colfield>-color-int  = '1'.
-  <gs_colfield>-color-inv  = '0'.
-
-  APPEND <gs_colfield> TO <gs_row>-it_colfields.
-
-  MODIFY <gt_table> FROM <gs_row>
-    TRANSPORTING it_colfields.
+  MODIFY <gt_data> FROM <gs_data>
+    TRANSPORTING <lt_scol>.
 ENDLOOP.
+
+
+" 3. Layout 연결
+gs_layout-ctab_fname = '<lt_scol 필드명>'.
 ```
 ```abap
-LOOP AT gt_bookings INTO gs_booking
-     WHERE smoker = 'X'.
+" 1. 출력 구조
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: excp_fld TYPE char1,
+      col_fld  TYPE char4,        " 예: 'C310'
+      lt_scol  TYPE lvc_t_scol,   " 셀 색상
+     END OF gs_data.
 
-  gs_colfield-fname      = 'SMOKER'.
-  gs_colfield-color-col  = col_negative.
-  gs_colfield-color-int  = '1'.
-  gs_colfield-color-inv  = '0'.
+DATA gt_data LIKE TABLE OF gs_data.
+DATA ls_scol TYPE lvc_s_scol.
 
-  APPEND gs_colfield TO gs_booking-it_colfields.
 
-  MODIFY gt_bookings FROM gs_booking
-    TRANSPORTING it_colfields.
+" 2. 셀 색상 처리
+LOOP AT gt_data INTO gs_data.
+
+  IF gs_data-loccuram < 500.
+    gs_data-excp_fld = '1'.
+  ELSEIF gs_data-loccuram >= 500 AND gs_data-loccuram <= 800.
+    gs_data-excp_fld = '2'.
+  ELSE.
+    gs_data-excp_fld = '3'.
+  ENDIF.
+
+  IF gs_data-smoker = 'X'.
+
+*   Line Color
+    gs_data-col_fld = 'C' && col_negative && '10'.
+
+*   Cell Color (SMOKER 셀만)
+    ls_scol-fname      = 'SMOKER'.
+    ls_scol-color-col  = col_negative.
+    ls_scol-color-int  = '1'.
+    ls_scol-color-inv  = '0'.
+
+    APPEND ls_scol TO gs_data-lt_scol.
+  ENDIF.
+
+  MODIFY gt_data FROM gs_data
+    TRANSPORTING excp_fld col_fld lt_scol.
+
+  CLEAR gs_data.
 ENDLOOP.
-```
-- Layout + ALV 연결 형식
-```abap
-gs_layout-ctab_fname = '<IT_COLFIELDS>'.
 
-go_alv_grid->set_table_for_first_display(
-  EXPORTING
-    is_layout = gs_layout
-  CHANGING
-    it_outtab = <gt_table>
-).
-```
-```abap
-gs_layout-ctab_fname = 'IT_COLFIELDS'.
 
-go_alv_grid->set_table_for_first_display(
-  EXPORTING
-    is_layout = gs_layout
-  CHANGING
-    it_outtab = gt_bookings
-).
+" 3. Layout 연결
+gs_layout-ctab_fname = 'LT_SCOL'.
 ```
 </br>
 </br>
