Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -335,8 +335,12 @@ gs_layout-info_fname = 'COLOR'.
 - `CTAB_FNAME` : ALV에게 “셀 색상(Cell Color) 정보가 들어있는 필드명”을 알려주는 설정
 </br>
 
-- `lt_scol` : 이 행에서 색칠할 셀 목록
-- `ls_scol` : 셀 하나 색상 정보
+- `lt_scol` : 이 행에서 색칠할 셀 목록 (`lvc_t_scol`)
+- `ls_scol` : 셀 하나 색상 정보 (`lvc_s_scol`)
+- `<ls_scol>-fname` : 색상을 적용할 컬럼(필드) 이름을 지정함.
+- `<ls_scol>-color-col` : 해당 셀에 적용할 색상을 지정함.
+- `<ls_scol>-color-int` : 색상을 진하게 표시할지 여부를 지정함.
+- `<ls_scol>-color-inv` : 글자색과 배경색을 서로 바꿀지 여부를 지정함.
 ```abap
 " 1. 출력 구조
 DATA: BEGIN OF <gs_data>.
