Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -1153,3 +1153,118 @@ ENDMODULE.
 </br>
 </br>
 
+### 실습 3
+</br>
+
+- 문제
+
+<img width="474" height="283" alt="image" src="https://github.com/user-attachments/assets/c6b45c6d-2851-41f2-97a9-1a145c147234" />
+
+</br>
+</br>
+</br>
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: gs_variant TYPE disvariant,
+      gs_stable TYPE LVC_S_STBL,
+      gs_layout TYPE LVC_S_LAYO.
+
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE sflight.
+DATA: excp TYPE CHAR1,
+      color TYPE C LENGTH 4,
+      lt_col TYPE LVC_T_SCOL,
+      END OF gs_flight.
+DATA: gt_flight LIKE TABLE OF gs_flight.
+DATA: ls_col TYPE LVC_S_SCOL.
+```
+</br>
+</br>
+
+**2) `F01` 모듈 수정**
+```abap
+FORM get_data.
+  SELECT * FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_flight
+    WHERE carrid IN so_car
+      AND connid IN so_con.
+  IF sy-subrc <> 0.
+    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
+  ELSE.
+    LOOP AT gt_flight INTO gs_flight.
+      IF gs_flight-seatsocc < 50.
+        gs_flight-excp = '1'.
+      ELSEIF gs_flight-seatsocc >= 50 AND gs_flight-seatsocc <= 200.
+        gs_flight-excp = '2'.
+      ELSE.
+        gs_flight-excp = '3'.
+      ENDIF.
+
+      IF gs_flight-fldate+0(4) = sy-datum+0(4).
+        gs_flight-color = 'C' && col_positive && 10.
+      ENDIF.
+
+      IF gs_flight-seatsmax - gs_flight-seatsocc  < 10.
+        ls_col-fname = 'SEATSMAX'.
+        ls_col-color-col = '6'.
+        ls_col-color-int = '0'.
+        ls_col-color-inv = '1'.
+        APPEND ls_col TO gs_flight-lt_col.
+        CLEAR ls_col.
+
+        ls_col-fname = 'SEATSOCC'.
+        ls_col-color-col = '6'.
+        ls_col-color-int = '0'.
+        ls_col-color-inv = '1'.
+
+        APPEND ls_col TO gs_flight-lt_col.
+      ENDIF.
+
+      MODIFY gt_flight FROM gs_flight TRANSPORTING excp color lt_col.
+      CLEAR gs_flight.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_layout .
+  gs_layout-grid_title = 'Flight List'.
+  gs_layout-zebra = 'X'.
+  gs_layout-sel_mode = 'C'.
+  gs_layout-excp_fname = 'EXCP'.
+  gs_layout-info_fname = 'COLOR'.
+  gs_layout-ctab_fname = 'LT_COL'.
+ENDFORM.
+```
+</br>
+</br>
+
+**3) `PBO` 모듈**
+```abap
+PERFORM set_layout.
+    CALL METHOD go_alv_grid->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'sflight'
+        is_variant                    = gs_variant
+        i_save                        = 'A'
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_flight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE A012(BC405_408).
+    ENDIF.
+```
+</br>
+</br>
+
+**4) 결과 확인**
+
+<img width="399" height="308" alt="image" src="https://github.com/user-attachments/assets/fd86219f-6de5-48d8-8e4b-006378b0b7a9" />
