Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -6,6 +6,8 @@
 - **3) ALV 임계값(Threshold) 아이콘 표시 – Exception Display (특정 조건에 따라 빨강/노랑/초록 아이콘 자동 표시)**
 - **4) ALV 초기 정렬 기준 설정 (lvc_s_sort)**
 - **5) ALV 초기 필터 조건 설정 (LVC_S_FILT)**
+- **6) ALV Line Color (행 색상 제어)**
+- **7) ALV Cell Color (셀 단위 색상 제어)**
 
 </br>
 </br>
