Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -723,6 +723,9 @@ ENDFORM.
 </br>
 
 **4) `PBO` 모듈 생성**
+- `SY-UNAME` : 현재 로그인한 사용자 ID
+- `SY-DATUM` : 현재 시스템 날짜 (`YYYYMMDD`)
+- `SY-UZEIT` : 현재 시스템 시간 (`HHMMSS`)
 ```abap
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
