Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -435,6 +435,7 @@ gs_layout-ctab_fname = 'LT_SCOL'.
 </br>
 
 **1) `TOP` 모듈 수정**
+- `SY-REPID` : 현재 실행 중인 ABAP 프로그램명(Report ID)
 ```abap
 TYPE-POOLS COL.
 
@@ -473,7 +474,7 @@ SELECTION-SCREEN END OF SCREEN 1100.
 
 INITIALIZATION.
   PERFORM set_options.
-  gs_variant-report = sy-cprog.
+  gs_variant-report = sy-repid.
   gs_variant-username = sy-uname.
   gs_variant-handle = 'MAIN'.
   " handle : 하나의 화면에 여러개의 ALV가 있는 경우
