Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -306,8 +306,9 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 ### 6) ALV Line Color (행 색상 제어)
 - ALV 행(Line)에 색상을 적용하는 기능
 - `INFO_FNAME` : ALV에게 “행 색상(Line Color) 정보가 들어있는 필드명”을 알려주는 설정
-- `TYPE-POOLS COL.` 로 색상 코드 확인 가능
+- `TYPE-POOLS COL.` 로 색상 코드 확인 가능 (필수)
 ```abap
+TYPE-POOLS COL.
 'C' && <color_constant> && <intensified> && <inverse>
 ```
 - `C` : 색상 사용 표시
