Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -323,9 +323,18 @@ TYPES: BEGIN OF gty_booking,
          color TYPE c LENGTH 4,
        END OF gty_booking.
 
-gs_booking-color = 'C' && col_negative && '10'.
+DATA: gs_booking TYPE gty_booking,
+      gt_booking TYPE TABLE OF gty_booking,
+      gs_layout  TYPE lvc_s_layo.
 
+gs_booking-color = 'C' && col_negative && '10'.
 gs_layout-info_fname = 'COLOR'.
+
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = gt_booking.
 ```
 </br>
 </br>
@@ -376,6 +385,13 @@ ENDLOOP.
 
 " 3. Layout 연결
 gs_layout-ctab_fname = '<lt_scol 필드명>'.
+
+" 4. ALV 출력
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = <gt_data>.
 ```
 ```abap
 " 1. 출력 구조
@@ -424,6 +440,13 @@ ENDLOOP.
 
 " 3. Layout 연결
 gs_layout-ctab_fname = 'LT_SCOL'.
+
+" 4. ALV 출력
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = gt_data.
 ```
 </br>
 </br>
