Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -8,6 +8,9 @@
 - **5) ALV 초기 필터 조건 설정 (LVC_S_FILT)**
 - **6) ALV Line Color (행 색상 제어)**
 - **7) ALV Cell Color (셀 단위 색상 제어)**
+</br>
+
+- **SELECT-OPTIONS는 `Selection Screen` 에서만 가능**
 
 </br>
 </br>
