Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -1,1 +1,54 @@
+## <  핵심 개념 >
+</br>
 
+- **1) ALV 데이터 갱신 (refresh_table_display, stable)**
+- **2) ALV 레이아웃 설정 (IS_LAYOUT)**
+- **3) ALV 임계값(Threshold) 아이콘 표시 – Exception Display (특정 조건에 따라 빨강/노랑/초록 아이콘 자동 표시)**
+- **4) ALV 초기 정렬 기준 설정 (lvc_s_sort)**
+- **5) ALV 초기 필터 조건 설정 (LVC_S_FILT)**
+- **6) ALV Line Color (행 색상 제어)**
+- **7) ALV Cell Color (셀 단위 색상 제어)**
+</br>
+
+- **SELECT-OPTIONS는 `Selection Screen` 에서만 가능**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 객체 생성 기본 문법 >
+</br>
+
+### 1) ALV 데이터 갱신
+- ALV Grid에서 기본 제공되는 표준 버튼(필터, 합계 등)을 화면에서 숨김 → 기능은 유지되고 화면에서만 제거
+- 
+```abap
+DATA: <gt_excluded> TYPE ui_functions.
+
+APPEND cl_gui_alv_grid=><function_code> TO <gt_excluded>.
+
+go_alv_grid->set_table_for_first_display(
+  EXPORTING
+    i_structure_name     = '<DDIC 구조>'
+    it_toolbar_excluding = <gt_excluded>
+  CHANGING
+    it_outtab            = <itab>
+).
+```
+```abap
+DATA: gt_excluded_functions TYPE ui_functions.
+
+APPEND cl_gui_alv_grid=>mc_fc_filter TO gt_excluded_functions.
+APPEND cl_gui_alv_grid=>mc_mb_sum    TO gt_excluded_functions.
+
+go_alv_grid->set_table_for_first_display(
+  EXPORTING
+    i_structure_name     = 'SBOOK'
+    it_toolbar_excluding = gt_excluded_functions
+  CHANGING
+    it_outtab            = gt_bookings
+).
+```
