Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -24,7 +24,10 @@
 
 ### 1) ALV 데이터 갱신
 - ALV Grid에서 기본 제공되는 표준 버튼(필터, 합계 등)을 화면에서 숨김 → 기능은 유지되고 화면에서만 제거
-- 
+- `CL_GUI_ALV_GRID` → ALV Grid 화면을 생성·제어하는 표준 클래스
+- `MC_FC_*` → ALV 개별 버튼 1개를 의미하는 Function Code
+- `MC_MB_*` → 여러 기능이 묶인 메뉴 버튼 Function Code
+- `MC_FC_EXCL_ALL` → ALV 툴바 전체 버튼을 숨기는 Function Code
 ```abap
 DATA: <gt_excluded> TYPE ui_functions.
 
