Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -29,12 +29,12 @@
 - `CL_GUI_ALV_GRID` → ALV Grid 화면을 생성·제어하는 표준 클래스
 - `UI_FUNCTIONS` → 숨길 Function Code들을 담는 내부테이블 타입
 - `IT_TOOLBAR_EXCLUDING` → ALV에서 제외할 툴바 기능 전달 파라미터
-- `GS_LAYOUT-NO_TOOLBAR` → ALV 툴바 영역 자체를 통째로 숨김
+- `GS_LAYOUT-NO_TOOLBAR` → ALV 툴바 영역 자체를 통째로 숨김 (툴바 자체 제거)
 </br>
 
 - `MC_FC_*` → ALV 개별 버튼 1개를 의미하는 Function Code
 - `MC_MB_*` → 여러 기능이 묶인 메뉴 버튼 Function Code
-- `MC_FC_EXCL_ALL` → ALV 툴바 전체 버튼을 숨기는 Function Code
+- `MC_FC_EXCL_ALL` → ALV 툴바 전체 버튼을 숨기는 Function Code (버튼만 숨김)
 ```abap
 DATA: <gt_excluded> TYPE ui_functions.
 
