Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -359,6 +359,14 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 - `<ls_scol>-color-int` : 색상을 진하게 표시할지 여부를 지정함.
 - `<ls_scol>-color-inv` : 글자색과 배경색을 서로 바꿀지 여부를 지정함.
 ```abap
+LVC_S_SCOL
+ ├─ FNAME        "색칠할 컬럼명
+ └─ COLOR        "색상 정보 구조체
+     ├─ COL
+     ├─ INT
+     └─ INV
+```
+```abap
 " 1. 출력 구조
 DATA: BEGIN OF <gs_data>.
         INCLUDE TYPE <structure>.
