Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -114,6 +114,8 @@ CALL METHOD go_alv->set_table_for_first_display
 | `cwidth_opt`  | `'X'` 설정 시 컬럼 폭 자동 최적화 |
 | `no_toolbar`  | `'X'` 설정 시 ALV 툴바 숨김 |
 | `totals_bef`  | `'X'` 설정 시 합계 행을 데이터 맨 위에 표시 |
+| `no_hgridln`  | `'X'` 설정 시 가로(Grid) 라인 숨김 |
+| `no_vgridln`  | `'X'` 설정 시 세로(Grid) 라인 숨김 |
 | `info_fname`  | **행(Row) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 | `ctab_fname`  | **셀(Cell) 색상 정보**를 담고 있는 내부 테이블 필드명 |
 
