Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -79,3 +79,176 @@ go_alv_grid->set_table_for_first_display(
 </br>
 
 ### 실습 1
+- layout 실습
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: OK_CODE TYPE sy-ucomm,
+      go_container TYPE REF TO cl_gui_custom_container,
+      go_alv_grid TYPE REF TO cl_gui_alv_grid.
+DATA: gs_variant TYPE disvariant,
+      gs_stable TYPE LVC_S_STBL,
+      gs_layout TYPE LVC_S_LAYO.
+
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE sflight.
+DATA: excp TYPE CHAR1,
+      color TYPE C LENGTH 4,
+      lt_field_colors TYPE LVC_T_SCOL,
+      END OF gs_flight.
+DATA: gt_flight LIKE TABLE OF gs_flight.
+DATA: ls_field_colors TYPE LVC_S_SCOL.
+
+*DATA: gs_flight2 TYPE BC400_S_FLIGHT,
+*      gt_flight2 TYPE TABLE OF BC400_S_FLIGHT.
+
+PARAMETERS: pa_va TYPE disvariant-variant.
+
+SELECT-OPTIONS: so_car FOR gs_flight-carrid,
+                so_con FOR gs_flight-connid.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+*  PERFORM get_data2.
+  CALL SCREEN 100.
+```
+</br>
+</br>
+
+**2) `F01` 모듈 수정**
+```abap
+TYPE-POOLS COL.
+
+FORM get_data.
+  SELECT * FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_flight
+    WHERE carrid IN so_car
+      AND connid IN so_con.
+  IF sy-subrc <> 0.
+    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
+  ELSE.
+    LOOP AT gt_flight INTO gs_flight.
+      IF gs_flight-seatsocc = 0.
+        gs_flight-excp = '1'.
+      ELSEIF gs_flight-seatsocc < 50.
+        gs_flight-excp = '2'.
+      ELSE.
+        gs_flight-excp = '3'.
+      ENDIF.
+
+      IF gs_flight-fldate+4(2) = sy-datum+4(2).
+        gs_flight-color = 'C' && col_negative && 10.
+      ENDIF.
+
+      IF gs_flight-PLANETYPE = '747-400'.
+        ls_field_colors-fname = 'PLANETYPE'.
+        ls_field_colors-color-col = col_positive.
+        ls_field_colors-color-int = '1'.
+        ls_field_colors-color-inv = '0'.
+        APPEND ls_field_colors TO gs_flight-lt_field_colors.
+      ENDIF.
+
+      MODIFY gt_flight FROM gs_flight TRANSPORTING excp color lt_field_colors.
+      CLEAR gs_flight.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_layout .
+  gs_layout-grid_title = 'Flights'.
+  gs_layout-zebra = 'X'.
+  gs_layout-sel_mode = 'C'.
+  gs_layout-excp_fname = 'EXCP'.
+  gs_layout-info_fname = 'COLOR'.
+  gs_layout-ctab_fname = 'LT_FIELD_COLORS'.
+  gs_layout-no_hgridln = 'X'.
+  gs_layout-no_vgridln = 'X'.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM free_alv .
+  IF go_container IS INITIAL.
+    go_container->free( ).
+  ENDIF.
+  IF go_alv_grid IS INITIAL.
+    go_alv_grid->free( ).
+  ENDIF.
+  FREE: go_container, go_alv_grid.
+ENDFORM.
+```
+</br>
+</br>
+
+**3) `PBO` 모듈 수정**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE create_and_transfer OUTPUT.
+  IF go_container IS INITIAL.
+    CREATE OBJECT go_container
+      EXPORTING
+        container_name              = 'MY_CONTROL_AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+      MESSAGE A010(BC405_408).
+    ENDIF.
+
+    CREATE OBJECT go_alv_grid
+      EXPORTING
+        i_parent          = go_container
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+      MESSAGE A010(BC405_408).
+    ENDIF.
+
+    gs_variant-report = sy-cprog.
+    gs_variant-variant = pa_va.
+
+    PERFORM set_layout.
+    CALL METHOD go_alv_grid->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'sflight'
+        is_variant                    = gs_variant
+        i_save                        = 'A'
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_flight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE A012(BC405_408).
+    ENDIF.
+
+
+  ENDIF.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
