Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -252,3 +252,37 @@ MODULE clear_ok_code OUTPUT.
   CLEAR OK_CODE.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**4) `PAI` 모듈**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+      PERFORM free_alv.
+    WHEN 'CANCEL'.
+      PERFORM free_alv.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+
+</br>
+</br>
+
+**5) 출력 결과**
+
+<img width="433" height="332" alt="image" src="https://github.com/user-attachments/assets/738970ec-5c0c-419b-955d-116a19b81e09" />
