--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -49,23 +49,23 @@ go_alv_grid->set_table_for_first_display(
 ).
 ```
 ```abap
-DATA: gt_excluded_functions TYPE ui_functions.
+DATA: gt_uifunc TYPE ui_functions.
 
-APPEND cl_gui_alv_grid=>mc_fc_filter TO gt_excluded_functions.
+APPEND cl_gui_alv_grid=>mc_fc_filter TO gt_uifunc.
 " → ALV 툴바에서 '필터(Filter)' 버튼 1개만 숨김
 
-APPEND cl_gui_alv_grid=>mc_mb_sum TO gt_excluded_functions.
+APPEND cl_gui_alv_grid=>mc_mb_sum TO gt_uifunc.
 " → 합계/소계 등 숫자 관련 기능이 들어있는 '합계 메뉴 버튼' 전체 숨김
 
-APPEND cl_gui_alv_grid=>mc_fc_excl_all TO gt_excluded_functions.
+APPEND cl_gui_alv_grid=>mc_fc_excl_all TO gt_uifunc.
 " → ALV 툴바에 있는 모든 표준 버튼을 한 번에 전부 숨김
 
 go_alv_grid->set_table_for_first_display(
   EXPORTING
     i_structure_name     = 'SBOOK'
-    it_toolbar_excluding = gt_excluded_functions
+    it_toolbar_excluding = gt_uifunc
   CHANGING
-    it_outtab            = gt_bookings
+    it_outtab            = gt_data
 ).
 ```
 </br>
