Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -39,7 +39,7 @@ CALL METHOD <alv_ref>->refresh_table_display
 ```
 </br>
 
-- `lvc_s_stbl` : ALV 새로고침 시 화면 위치 고정용 구조
+- `LVC_S_STBL` : ALV 새로고침 시 화면 위치 고정용 구조
 - `row = 'X'` → 행(스크롤) 위치 유지
 - `col = 'X'` → 열(커서) 위치 유지
 ```abap
@@ -52,9 +52,9 @@ ls_stable-col = 'X'.   " 열 위치 유지
 
 - 예시 코드
 ```abap
-DATA gs_stable TYPE lvc_s_stbl.
+DATA gs_stable TYPE LVC_S_STBL.    " TOP
 
-gs_stable-row = 'X'.
+gs_stable-row = 'X'.      " PBO
 gs_stable-col = 'X'.
 
 CALL METHOD go_alv->refresh_table_display
