Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -76,7 +76,7 @@ CALL METHOD go_alv->refresh_table_display
 - **`Ctrl + Space`** - `gs_layout-` 뒤에서 누르면 구조체 필드 목록 자동 표시
 </br>
 
-- `lvc_s_layo` : ALV 화면의 모양(레이아웃) 을 제어하는 구조체
+- `LVC_S_LAYO` : ALV 화면의 모양(레이아웃) 을 제어하는 구조체
 ```abap
 DATA <ls_layout> TYPE lvc_s_layo.
 
@@ -88,7 +88,7 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab        = <itab>.
 ```
 ```abap
-DATA gs_layout TYPE lvc_s_layo.
+DATA gs_layout TYPE LVC_S_LAYO.
 
 gs_layout-grid_title = 'ALV Grid Title'.
 gs_layout-zebra      = 'X'.   " 행 줄무늬
