Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -88,13 +88,15 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab        = <itab>.
 ```
 ```abap
-DATA gs_layout TYPE LVC_S_LAYO.
+DATA gs_layout TYPE LVC_S_LAYO.            " TOP
 
-gs_layout-grid_title = 'ALV Grid Title'.
-gs_layout-zebra      = 'X'.   " 행 줄무늬
-gs_layout-cwidth_opt = 'X'.   " 컬럼 너비 자동
+gs_layout-grid_title = 'Booking List'. " Title 적용        " F01
+gs_layout-zebra = 'X'.  " Row 구분색 적용
+gs_layout-cwidth_opt = 'X'. " 컬럼너비 최적화
+gs_layout-totals_bef = 'X'. " 합계 맨 위로
+gs_layout-sel_mode = 'A'. " _,A,B,C,D 선택모드
 
-CALL METHOD go_alv->set_table_for_first_display
+CALL METHOD go_alv->set_table_for_first_display            " PBO
   EXPORTING
     i_structure_name = 'SBOOK'
     is_layout        = gs_layout
