Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -22,7 +22,7 @@
 ## < ABAP 객체 생성 기본 문법 >
 </br>
 
-### 1) ALV 데이터 갱신
+### 1) ALV 표준 툴바 버튼 제어
 - ALV Grid에서 기본 제공되는 표준 버튼(필터, 합계 등)을 화면에서 숨김 → 기능은 유지되고 화면에서만 제거
 </br>
 
@@ -68,6 +68,11 @@ go_alv_grid->set_table_for_first_display(    " PBO
     it_outtab            = gt_data
 ).
 ```
+</br>
+</br>
+
+### 2)
+
 </br>
 </br>
 
